# fde-agent-uipath

./: .gitignore  README.md  requirements.txt
scripts/: diagnose.py
scripts/agents/: __init__.py  aggregator.py  brain_factory.py  crew_poc.py  crew_runner.py  judge_prompt.md  peer_review_prompt.md  sub_agent_5_mitigation.py  sub_agent_6_peer_review.py
scripts/agents/gemini_wrappers/: __init__.py  _base.py  e2e.py  sub_agent_1_parser_gemini.py  sub_agent_2_risk_gemini.py  sub_agent_3_standards_gemini.py  sub_agent_4_rag_gemini.py  sub_agent_5_mitigation_gemini.py
scripts/core/: __init__.py  _regression_check.py  contracts.py  engine.py  tools.py
scripts/data/: eu-ai-act-annex-iii-v0.1.yaml  gold_set_v0.2.json  gold_set_v0.2_independent.json  mapping-ontology-v0.1.yaml  mit-mitigation-taxonomy.yaml  mit-risk-causal-domain-v0.1.yaml  mitre-atlas.yaml  nist-ai-rmf-v0.1.yaml  owasp-llm-top10-v2025.yaml  translate_ontology_to_en.py
scripts/data/sample-workflows/: legal-contract-review-v0.1.md  loan-underwriting-kr-v0.1.md
scripts/heatmap/: __init__.py  _peer_review_fixture.py  executive_summary.py  peer_review_disagreement.py  render.py  side_by_side.py
scripts/metrics/: __init__.py  confdecay.py  ips.py  laaj.py
scripts/parser/: __init__.py  bpmn.py  image_ocr.py  mermaid.py
scripts/uipath/: README.md  agent_entry.py  bpmn_diagnosis_workflow.xml  build_coded_agent.sh  coded_agent_wrapper.py  healthcheck.py  hitl_mockup.html  loop_b_symbolic.py  pyproject.toml  uipath.json  uipath_client.py
